# mlir-tutorial

./: CMakeLists.txt  README.md  test.mlir
include/Conversion/ToyToHello/: ToyToHello.h
include/Dialect/: CMakeLists.txt
include/Dialect/Hello/IR/: CMakeLists.txt  HelloOps.hpp  HelloOps.td
include/Dialect/Toy/: CMakeLists.txt
include/Dialect/Toy/IR/: CMakeLists.txt  ToyOps.hpp  ToyOps.td
include/Pass/: Passes.h
lib/Conversion/: CMakeLists.txt
lib/Conversion/ToyToHello/: CMakeLists.txt  ToyToHello.cpp
lib/Dialect/: CMakeLists.txt
lib/Dialect/Hello/IR/: CMakeLists.txt  HelloOps.cpp
lib/Dialect/Toy/IR/: CMakeLists.txt  ToyOps.cpp
lib/Dialect/Toy/Transforms/: CMakeLists.txt  createSubOp.cpp  removeRedundantAddSub.cpp
toy-opt/: CMakeLists.txt  toy-opt.cpp
